--- a/webapp/view/App.view.xml
+++ b/webapp/view/App.view.xml
@@ -6,28 +6,14 @@
    <App class="myAppDemoWT">
       <pages>
          <Page title="{i18n>homePageTitle}">
+            <headerContent>
+                <Button
+                    icon="sap-icon://hello-world"
+                    press="onOpenDialog"/>
+            </headerContent>
             <content>
-               <Panel
-                  headerText="{i18n>helloPanelTitle}"
-                  class="sapUiResponsiveMargin"
-			width="auto">
-                  
-                  <content>
-                     <Button
-                        text="{i18n>showHelloButtonText}"
-                        press="onShowHello"
-                        class="myCustomButton"
-                        />
-                     <Input
-                        value="{/recipient/name}"
-                        description="Hello {/recipient/name}"
-                        valueLiveUpdate="true"
-                        width="60%"/>
-
-                        <Text text="Hello {/recipient/name}" class ="sapUiSmallMargin sapThemeHighlight-asColor myCustomText"/>
-
-                  </content>
-               </Panel>
+               <mvc:XMLView viewName="app.view.HelloPanel"/>
+               <mvc:XMLView viewName="app.view.InvoiceList"/>
             </content>
          </Page>
       </pages>
